# Lakehouse

./: .env.example  .gitignore  .pyiceberg.yaml  Dockerfile.spark  README.md  docker-compose.yml  pyproject.toml  requirements.txt
archive/: docker-compose.yml
archive/nessie/: application.properties
archive/notebooks/: 1. iceberg_init.ipynb  2. Examine_Iceberg.ipynb  3. Ingest_docs.ipynb
notebook-seed/: iceberg_init.ipynb
notebooks/: 1. iceberg_init.ipynb  2. Examine_Iceberg.ipynb  iceberg_hello_world.ipynb  iceberg_init.ipynb
