[project]
name = "lakehouse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "llama-index>=0.12.44",
    "llama-index-embeddings-gemini>=0.3.2",
    "llama-index-llms-gemini>=0.5.0",
    "llama-index-vector-stores-qdrant>=0.6.1",
    "qdrant-client>=1.14.3",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "pyiceberg>=0.9.1",
    "pyspark>=4.0.0",
]
